--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,3 @@
-{\rtf1\ansi\ansicpg936\cocoartf1404\cocoasubrtf130
-{\fonttbl\f0\fnil\fcharset0 Menlo-Regular;}
-{\colortbl;\red255\green255\blue255;\red14\green110\blue109;\red244\green244\blue244;\red38\green38\blue38;
-}
-\paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\sl320\partightenfactor0
-
-\f0\fs28 \cf2 \cb3 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 *.\cf4 \strokec4 js linguist-language=Java\
-\cf2 \strokec2 *.\cf4 \strokec4 css linguist-language=Java\
-\cf2 \strokec2 *.\cf4 \strokec4 html linguist-language=Java}
+*.js linguist-language=Java
+*.css linguist-language=Java
+*.html linguist-language=Java
